# Virtual-Dice-Bluepill

./: .gitignore  Async-Stages.md  README.md  SD.md
Final Project/Program/C version/: Project.hzs  main.c
Final Project/Program/Rust-version/: Cargo.toml
Final Project/Program/Rust-version/src/: main.rs
Final Project/Simulation/: Simulation.pdsprj
Middle Stages/: Done-List.md
Middle Stages/Stage A/Program/: Project.hzs  main.c
Middle Stages/Stage A/Simulation/: Simulation.pdsprj
Middle Stages/Stage B/Simulation/: Simulation.pdsprj
Middle Stages/Stage C/Program/: Project.hzp  Project.hzs  main.c
Middle Stages/Stage C/Simulation/: Simulation.pdsprj
Middle Stages/Stage D/Program/: Project.hzs  main.c
Middle Stages/Stage D/Program - Copy/: Project.hzs  main.c
Middle Stages/Stage D/Program/gpio/: gpio.c
Middle Stages/Stage D/Simulation/: Simulation.pdsprj
Middle Stages/Stage D/Simulation - Copy/: Simulation.pdsprj
Middle Stages/Stage E/Program/: Project.hzs  main.c
Middle Stages/Stage F/Program/: Project.hzs  main.c
Middle Stages/Stage F/Simulation/: Simulation.pdsprj
Middle Stages/Stage G/Program/: Project.hzs  main.c
Middle Stages/Stage G/Simulation/: Simulation.pdsprj
Middle Stages/Tests/Program/: Project.hzs  main.c
Middle Stages/Tests/Program/gpio/: gpio.h
Middle Stages/Tests/Simulation/: Simulation.pdsprj
documents/: Atividades da etapas sincronas.md
